# fishmlserv

./: Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
data/: fish_test_data_100k.csv:Zone.Identifier
note/: fish.ipynb  ss.ipynb
src/fishmlserv/: curl.py  main.py  predict.py
src/fishmlserv/model/: get-model-path.py  manager.py
