[project]
name = "fishmlserv"
version = "0.6.0"
description = "Createing a Machine learning model - using sklearn(KNeighborsClassifier) using FastAPI, fly.io"
authors = [
    {name = "rlaehgus97", email = "starkim625@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.112.2",
    "uvicorn[standard]>=0.30.6",
    "matplotlib>=3.7.5",
    "scikit-learn>=1.3.2",
    "pandas>=2.0.3",
    "numpy>=1.24.4",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
