[project]
name = "fishmlserv"
version = "0.8.0"
description = "Createing a Machine learning model - using sklearn(KNeighborsClassifier) using FastAPI, fly.io"
authors = [
    {name = "rlaehgus97", email = "starkim625@gmail.com"},
]
dependencies = [
#docker image에 포함되어 없어도 프로그램 작동
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
